[package]
name = "s3-pusher"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.0.1"
aws-sdk-s3 = "1.4.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
walkdir = "2.3"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
async-stream = "0.3"
humansize = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
